2/config/app_02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: hello-kubernetes-2
    app.kubernetes.io/instance: app2-deployment
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: app2
    app.kubernetes.io/part-of: part-2
  type: ClusterIP
  ports:
  - name: app2-service
    protocol: TCP
    port: 80
    targetPort: 8080
